deploy/k8s/overlays/prod/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notif-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging

    # MVP: allow HTTP + HTTPS together
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    # minimal but useful
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.sagarwaidande.org
      secretName: notif-api-tls
    - hosts:
        - webhook.sagarwaidande.org
      secretName: notif-webhook-tls

  rules:
    - host: api.sagarwaidande.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notif-api-svc
                port:
                  number: 80

    - host: webhook.sagarwaidande.org
      http:
        paths:
          # keep only Twilio endpoint exposed
          - path: /v1/webhooks/twilio/status
            pathType: Prefix
            backend:
              service:
                name: notif-webhook-svc
                port:
                  number: 80
